welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: value lenght is not a member of Array[Int]
	for (k <- 0 to nums.lenght-1) {
                            ^array123:9: error: not found: value b
	if (a==b && b==c && c==1) return true
               ^array123:10: error: type mismatch;
 found   : String("gladys")
 required: Boolean
	else return "gladys"
                    ^